# practice_fastapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh  wal-config.yml.example
alembic/: env.py
alembic/versions/: 2025_05_26_1534-916d8c75de58_init.py  2025_06_21_1509-6bd792dd96e8_.py
rabbitmq/: Dockerfile  __init__.py
rabbitmq/config/: __init__.py  config.py
rabbitmq/src/: consumer.py  producer.py
rabbitmq/utils/: telenotify.py
src/: main.py
src/api_v1/categories/: crud.py  views.py
src/api_v1/discounts/: crud.py  schemas.py  views.py
src/config/: config.py
src/database/: core.py  models.py
src/static/css/: categories.css  description.css  discounts.css  index.css
src/templates/: base.html  description.html  discounts.html  index.html
src/utils/: storage.py
